--- a/DirectoryAttributeManager.Core/DirectoryAttributeManager.Core.fsproj
+++ b/DirectoryAttributeManager.Core/DirectoryAttributeManager.Core.fsproj
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <!-- Op: Project _ library net8.0 -->
+  <!-- Op: Project _ library netstandard2.0 -->
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
     <!--GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources-->
     <OutputType>Library</OutputType>
@@ -15,7 +15,7 @@
   <PropertyGroup>
     <PackageId>StarlyCode.DirectoryAttributeManager.Core</PackageId>
     <Title>DirectoryAttributeManager.Core</Title>
-    <VersionPrefix>0.0.1</VersionPrefix>
+    <VersionPrefix>0.1.0</VersionPrefix>
     <Description>
 		  This library provides access to the functionality of Directory Attribute Manager.
 		</Description>
