--- a/DirectoryAttributeManager.Tests/DirectoryAttributeManager.Tests.fsproj
+++ b/DirectoryAttributeManager.Tests/DirectoryAttributeManager.Tests.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
-    <Compile Include="Program.fs" />
+    <Compile Include="Tests.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DirectoryAttributeManager.Core\DirectoryAttributeManager.Core.fsproj" />
