--- a/DirectoryAttributeManager.Tests/DirectoryAttributeManager.Tests.fsproj
+++ b/DirectoryAttributeManager.Tests/DirectoryAttributeManager.Tests.fsproj
@@ -1,8 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
+    <WarningsAsErrors>0025;3239;FS0001;FS0020;FS0025;FS0026;FS0193</WarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
